# lirox-notes

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.config.js
.opencode/: opencode.json
.opencode/agents/: architecture-agent.md  data-agent.md  git-agent.md  js-developer.md  release-agent.md  rust-developer.md  security-agent.md  testing-agent.md  ui-agent.md
crates/app/: Cargo.toml
crates/app/assets/: app.css  editor-bridge.js  editor.js  tailwind.css
crates/app/src/: lib.rs  main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
planning/: README.md
planning/stage-1-functional-boundaries/: README.md  UKNOWNS.md
planning/stage-2-technical-choices/: AGENTS_AND_SKILLS.md  CHOICES.md  DEPENDENCIES.md  DEPLOYMENT.md  README.md  ROUTES.md  SECURITY.md  TECHNICAL_CHALLENGES.md
planning/stage-3-data-structures-models/: DESIGN_INSPIRATION.md  MIGRATIONS.md  MODELS.md  NAMING.md  OPERATIONS.md  README.md
planning/stage-4-application-flows/: CONFLICT_FLOWS.md  DESIGN_FLOWS.md  ERROR_FLOWS.md  README.md  SYNC_FLOWS.md  USER_FLOWS.md
planning/stage-5-confirmation-review/: CHECKLIST.md  CONNECTIONS.md  GAPS.md  README.md
planning/stage-6-building-mvp/: MVP_PLAN.md  README.md  TASKS.md  TESTING.md
planning/stage-7-release-first-version/: CHANGELOG.md  KNOWN_ISSUES.md  README.md  RELEASE_CHECKLIST.md
public/assets/: app.css
scripts/: dx-serve
src/: main.rs  router.rs
src/editor/: mod.rs
src/filelib/: mod.rs
src/widgets/: mod.rs  sidebar.rs
(+12 files in other folders)
